--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -9,7 +9,7 @@ on:
 permissions:
   contents: read
 jobs:
-  build_and_deploy_production:
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,4 +19,4 @@ jobs:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_TESLA_INTELLIGENCE_5205D }}
           projectId: tesla-intelligence-5205d
-          # No channelId specified, so it deploys to production
+          channelId: live
