--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "load-data": "tsx scripts/load-data.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "antd": "^5.24.8",
     "chart.js": "^4.4.9",
     "chartjs-plugin-datalabels": "^2.2.0",
